force-app/main/default/objects/Agent_Decision_Log__c/Agent_Decision_Log__c.object-meta.xml
<CustomObject>
    <description>CV Review Agent - Agent Decision Log</description>
    <label>Agent Decision Log</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Decision Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>