force-app/main/default/objects/Agent_Decision_Log__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>