force-app/main/default/objects/Agent_Decision_Log__c/fields/Candidate_Ids__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Ids__c</fullName>
    <label>Candidate Ids</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>