force-app/main/default/objects/Agent_Decision_Log__c/fields/Input_JSON__c.field-meta.xml
<CustomField>
    <fullName>Input_JSON__c</fullName>
    <label>Input JSON</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>