force-app/main/default/objects/Agent_Decision_Log__c/fields/Output_JSON__c.field-meta.xml
<CustomField>
    <fullName>Output_JSON__c</fullName>
    <label>Output JSON</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>