force-app/main/default/objects/Agent_Decision_Log__c/fields/Role_Context__c.field-meta.xml
<CustomField>
    <fullName>Role_Context__c</fullName>
    <label>Role Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>