force-app/main/default/objects/Agent_Decision_Log__c/fields/Score_Breakdown_JSON__c.field-meta.xml
<CustomField>
    <fullName>Score_Breakdown_JSON__c</fullName>
    <label>Score Breakdown JSON</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>