force-app/main/default/objects/Agent_Decision_Log__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>